<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">
    
    <LinearLayout
        android:id="@+id/ll_create_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_create"
            android:textSize="25sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/edt_enter_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_enter_pin"
            android:padding="10dp"
            android:inputType="numberPassword"
            android:background="@drawable/round_edittext"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/btn_create_pin"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:text="@string/text_create_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_celll" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_enter_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_enter_pin"
            android:textSize="25sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/edt_enter_login_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_enter_pin"
            android:padding="10dp"
            android:inputType="numberPassword"
            android:background="@drawable/round_edittext"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/btn_login"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:text="@string/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_celll" />

    </LinearLayout>


</LinearLayout>