<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/tv_patient_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_patient_list"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/ll_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_patient_header"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_first_name_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/text_first_name"
            android:padding="10dp"
            android:background="@drawable/round_edittext"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edt_created_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_created_date"
                    android:editable="false"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:background="@drawable/round_edittext"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edt_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Date Of Birth"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:editable="false"
                    android:background="@drawable/round_edittext"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_filter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:text="@string/text_filter"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_celll"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_patients"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_filters"/>

    <ImageView
        android:id="@+id/iv_add_patients"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/add"/>

</RelativeLayout>