<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Activity.PatientDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_patient_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_patient_detail"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/edit_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/text_first_name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/text_first_name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/text_last_name"
            android:padding="10dp" />


        <Spinner
            android:id="@+id/spn_blood_group_edit"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:entries="@array/blood_group"
            android:background="@drawable/round_edittext"
            android:theme="@style/ThemeSpinner"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/spn_status_edit"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_edittext"
            android:entries="@array/status"
            android:theme="@style/ThemeSpinner"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edit_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/text_dateofbirth"
            android:padding="10dp" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="male"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="female"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RadioGroup>


    </LinearLayout>


</LinearLayout>